# spin-survivor-draft

./: Cargo.toml  README.md  generate-players-migration.sh  migration.sql  migration.up.sql  spin.toml
assets/: auth.css  auth.js  index.html  join.html  styles.css  vote-out.html
migrations/: 001_create_players_and_drafters.down.sql  001_create_players_and_drafters.up.sql  002_add_image_url_to_players.down.sql  002_add_image_url_to_players.up.sql
src/: lib.rs
