[package]
name = "survivor-draft"
authors = ["Kate Goldenring <kate.goldenring@fermyon.com>"]
description = "Draft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4" }
spin-sdk = "3.0.1"
serde_json = "1.0"
serde = {  version = "1.0.208", features = ["derive"] }
time = {  version = "0.3", features = ["serde-human-readable"] }

[workspace]
